<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="edu.erau.scoutfrc.EndGameTabFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_height="wrap_content"
                    style="@style/CustomText"
                    android:text="@string/eCooperation"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/eBonus1"/>
                <CheckBox
                    android:id="@+id/eCheck_StackYellow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/eBonus2"/>
                <CheckBox
                    android:id="@+id/eCheck_StackTop"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/eBonus3"/>
                <CheckBox
                    android:id="@+id/eCheck_StackBottom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/eBonus4"/>
                <EditText
                    android:id="@+id/eText_NumStacked"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </TableRow>

            <!-- Draw a horizontal border as a screen divider -->
            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <!-- Human Player -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomText"
                    android:text="@string/eHumanPlayer"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/eHP1"/>
                <CheckBox
                    android:id="@+id/eCheck_AbleCollect"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/eHP2"/>
                <Spinner
                    android:id="@+id/eSpinner_CollectWhat"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/eRoles"/>
                <CheckBox
                    android:id="@+id/eCheck_Stacker"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eRoles1"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <CheckBox
                    android:id="@+id/eCheck_Herder"
                    android:layout_column="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eRoles2"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <CheckBox
                    android:id="@+id/eCheck_BinSpecialist"
                    android:layout_column="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eRoles3"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <CheckBox
                    android:id="@+id/eCheck_NoodleSpecialist"
                    android:layout_column="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eRoles4"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <CheckBox
                    android:id="@+id/eCheck_Inbound"
                    android:layout_column="1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eRoles5"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <CheckBox
                    android:id="@+id/eCheck_Other"
                    android:layout_column="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eRoles6"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gNotes"/>
                <EditText
                    android:id="@+id/eText_Notes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_notes"
                    android:inputType="text|textCapWords" />
            </TableRow>

            <!-- Draw a horizontal border as a screen divider -->
            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <!-- Buttons -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <Button
                    android:id="@+id/eResetBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="ResetForm"
                    android:text="@string/gReset"/>
                <Button
                    android:id="@+id/eSubmitBtn"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:onClick="SubmitForm"
                    android:text="@string/gSubmit"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</FrameLayout>
