<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="edu.erau.scoutfrc.AutoTabFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gCompetition"/>
                <Spinner
                    android:id="@+id/aSpinner_Comp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gTeam"/>
                <EditText
                    android:id="@+id/aText_Team"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_team"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gMatch"/>
                <EditText
                    android:id="@+id/aText_Match"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_match"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/aStartingPos"/>
                <Spinner
                    android:id="@+id/aSpinner_StartingPos"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/aScouter"/>
                <EditText
                    android:id="@+id/aText_Scouter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text|textCapWords" />
            </TableRow>

            <!-- https://developer.android.com/guide/topics/ui/layout/grid.html -->
            <!-- Draw a horizontal border as a screen divider -->
            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/aMove"/>
                <CheckBox
                    android:id="@+id/aCheck_Move"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <!-- Yellow Totes -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomText"
                    android:text="@string/gYTotes"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/aYTotes1"/>
                <CheckBox
                    android:id="@+id/aCheck_Push"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gHowMany"/>
                <Spinner
                    android:id="@+id/aSpinner_HowMany1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gStackTotes"/>
                <CheckBox
                    android:id="@+id/aCheck_StackTotes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gHowMany"/>
                <Spinner
                    android:id="@+id/aSpinner_HowMany2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <!-- Draw a horizontal border as a screen divider -->
            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <!-- Recycle Bins -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CustomText"
                    android:text="@string/gRecycleBins"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/aBins1"/>
                <CheckBox
                    android:id="@+id/aCheck_MoveRecycleBins"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/gHowMany"/>
                <Spinner
                    android:id="@+id/aSpinner_HowMany3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:text="@string/aBins2"/>
                <CheckBox
                    android:id="@+id/aCheck_GoCenter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/aBins3"/>
                <Spinner
                    android:id="@+id/aSpinner_HowMany4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/aBins4"/>
                <CheckBox
                    android:id="@+id/aCheck_MoveGreyTotes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="CheckBoxClickMethod" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</FrameLayout>
